Nueva funcalidad eliminar y Agregar productos
